...
    <string name="app_package" translatable="false">com.kfunallday.ksmessaging</string>

    <string name="setup_title">Welcome to Ks-messaging</string>
    <string name="setup_name_explanation">Your nickname will be shown next to any content you post. You can\'t change it after creating your account.</string>
    <string name="setup_next">Next</string>
...
<string name="nav_drawer_open_description">Open the navigation drawer</string>
    <string name="nav_drawer_close_description">Close the navigation drawer</string>
    <string name="contact_list_button">Contacts</string>
    <string name="groups_button">Private Groups</string>
    <string name="forums_button">Forums</string>
    <string name="blogs_button">Blogs</string>
    <string name="lock_button">Lock App</string>
    <string name="settings_button">Settings</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="transports_onboarding_text">Tap here to control how Ks-messaging connects to your contacts.</string>
...
	<string name="add_contact_remotely_title_case">Add Contact at a Distance</string>
	<string name="add_contact_nearby_title">Add contact nearby</string>
	<string name="add_contact_remotely_title">Add contact at a distance</string>
	<string name="contact_link_intro">Enter the link from your contact here</string>
	<string name="contact_link_hint">Contact\'s link</string>
...
	<string name="adding_contact_error">There was an error adding the contact.</string>
	<string name="pending_contact_requests_snackbar">There are pending contact requests</string>
	<string name="pending_contact_requests">Pending Contact Requests</string>
	<string name="no_pending_contacts">No pending contacts</string>
	<string name="waiting_for_contact_to_come_online">Waiting for contact to come online…</string>
...
	<string name="pref_language_changed">This setting will take effect when you restart Ks-messaging. Please sign out and restart Ks-messaging.</string>
	<string name="pref_language_default">System default</string>
	<string name="display_settings_title">Display</string>
	<string name="pref_theme_title">Theme</string>
	<string name="pref_theme_light">Light</string>
	<string name="pref_theme_dark">Dark</string>
	<string name="pref_theme_system">System default</string>

	<!-- Settings Connections -->
	<string name="network_settings_title">Connections</string>
	<string name="bluetooth_setting">Connect to contacts via Bluetooth</string>
	<string name="wifi_setting">Connect to contacts on the same Wi-Fi network</string>
	<string name="tor_enable_title">Connect to contacts via the Internet</string>
	<string name="tor_enable_summary">All connections go through the Tor network for privacy</string>
	<string name="tor_network_setting">Connection method for Tor network</string>
	<string name="tor_network_setting_automatic">Automatic based on location</string>
	<string name="tor_network_setting_without_bridges">Use Tor network without bridges</string>
...

	<!-- Settings Security and Panic -->
	<string name="security_settings_title">Security</string>
	<string name="pref_lock_title">App lock</string>
	<string name="pref_lock_summary">Use the device\'s screen lock to protect Ks-messaging while signed in</string>
	<string name="pref_lock_disabled_summary">To use this feature, set up a screen lock for your device</string>
	<string name="pref_lock_timeout_title">App lock inactivity timeout</string>
	<!-- The %s placeholder is replaced with the following time spans, e.g. 5 Minutes, 1 Hour -->
	<string name="pref_lock_timeout_summary">When not using Ks-messaging, automatically lock it after %s</string>
...
	<string name="screenshot_alice">Alice</string>
	<!-- This is a name to be used in screenshots. Feel free to change it to a local name. -->
	<string name="screenshot_bob">Bob</string>
	<!-- This is a name to be used in screenshots. Feel free to change it to a local name. -->
	<string name="screenshot_carol">Carol</string>
	<!-- This is a message to be used in screenshots. Please use the same translation for Bob! -->
	<string name="screenshot_message_1">Hi Bob!</string>
	<!-- This is a message to be used in screenshots. Please use the same translation for Alice! -->
	<string name="screenshot_message_2">Hi Alice! Thanks for telling me about Ks-messaging!</string>
...
