...
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/intro"
			app:passwordToggleEnabled="true">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/password_entry"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/choose_password"
				android:imeOptions="flagNoPersonalizedLearning|actionNext"
				android:inputType="textPassword"
				android:maxLines="1">
...
			app:layout_constraintLeft_toLeftOf="parent"
			app:layout_constraintRight_toRightOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/strength_meter"
			app:passwordToggleEnabled="true">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/password_confirm"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:hint="@string/confirm_password"
				android:imeOptions="flagNoPersonalizedLearning|actionNext"
				android:inputType="textPassword"
				android:maxLines="1" />
...
			style="@style/BriarButtonFlat.Positive"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/more_info"
			app:icon="@drawable/ic_info_white"
			app:iconPadding="8dp"
			app:layout_constraintBottom_toTopOf="@+id/next"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/password_confirm_wrapper" />

		<Button
			android:id="@+id/next"
			style="@style/BriarButton"
...
